<resources>
    <string name="app_name">PR2_HamzaiMarc</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Gmail</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Menu</string>
    <string name="menu_slideshow">Calendar</string>
    <string name="horari_servei">Customer Service Hours</string>
    <string name="setting">Settings</string>
    <string name="about">About</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="A">Change Text Size</string>
    <string name="B">Change Background</string>
    <string name="C">Change User Name</string>
    <string name="fasfus">FasFus</string>

    <string-array name="textSize">
        <item>  Small </item>
        <item>  Medium </item>
        <item>  Large </item>
    </string-array>

    <string-array name="theme">
        <item> Fosc </item>
        <item> Clar </item>
    </string-array>

    <string-array name="Menu_Names">
        <item> Burger1 </item>
        <item> Burger2 </item>
        <item> Burger3 </item>
        <item> Burger4 </item>
        <item> Burger5 </item>
        <item> Burger6 </item>
        <item> Burger7 </item>
        <item> Burger8 </item>
        <item> Burger9 </item>
        <item> Burger10 </item>
        <item> Burger11 </item>
        <item> Burger12 </item>
        <item> Burger13 </item>
        <item> Burger14 </item>
        <item> Burger15 </item>
    </string-array>

    <string-array name="Description">
        <item> This is random Description </item>
        <item> This is random Description </item>
        <item> This is random Description </item>
        <item> This is random Description </item>
        <item> This is random Description </item>
        <item> This is random Description </item>
        <item> This is random Description </item>
        <item> This is random Description </item>
        <item> This is random Description </item>
        <item> This is random Description </item>
        <item> This is random Description </item>
        <item> This is random Description </item>
        <item> This is random Description </item>
        <item> This is random Description </item>
        <item> This is random Description </item>
    </string-array>

    <string name="Welcome">Welcome to the Fasfus page. Start session to continue.</string>
    <string name="save">Save</string>
    <string name="username">Username</string>
    <string name="about_info">Based in Spain since 2020, Fasfus Spain has more than 483 restaurants spread throughout the Spanish geography that generate some 23,000 direct jobs.</string>
    <string name="about_info2">Our history and Our values FasFus has four basic principles that characterize its business philosophy: Quality, Service, Cleanliness and Value or Affordability.</string>

</resources>