<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/save"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity1">

    <TextView
        android:id="@+id/A"
        android:layout_width="347dp"
        android:layout_height="45dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="195dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="34dp"
        android:text="@string/A"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/B"
        android:layout_width="357dp"
        android:layout_height="35dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="45dp"
        android:text="@string/B"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/A" />

    <TextView
        android:id="@+id/C"
        android:layout_width="364dp"
        android:layout_height="35dp"
        android:layout_marginStart="67dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="380dp"
        android:text="@string/C"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/B" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginStart="334dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="34dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_dialog_info"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/settingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="200dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingUser" />

    <EditText
        android:id="@+id/settingUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="98dp"
        android:layout_marginBottom="19dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/settingButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/C" />

</androidx.constraintlayout.widget.ConstraintLayout>